# ai-hackathon

./: .env.example  .gitignore  QA_SHEET.md  README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed.py  simulate_replies.py
.claude/: settings.json
agent/: agent.py  prompts.py  tools.py
routers/: agent.py  contractors.py  projects.py  tasks.py  terminations.py
services/: contractor_service.py  email_service.py
src/: main.py
src/agents/: graph.py
src/tools/: example.py
templates/: base.html  buyer_progress.html  contractors.html  email_log.html  index.html  inject_email.html  new_project.html  project_detail.html
